--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -412,15 +412,17 @@ input[type="radio"] {
 }
 
 .cycles-pain, .cycles-peace {
+	width: 100%;
+	float: left;
 
     li {
-    width: 54%;
-    float:left;
-    display:inline;
-    text-transform: uppercase;
-    font-size: 12px;
-    letter-spacing: 0px;
-    margin-left: -4%;
+		width: 50%;
+		float:left;
+		display:inline;
+		text-transform: uppercase;
+		font-size: 12px;
+		letter-spacing: 0px;
+		//margin-left: -4%;
     }
     
     .checkbox {
