--- a/www/templates/cycles_results.html
+++ b/www/templates/cycles_results.html
@@ -14,6 +14,7 @@
 				<div class="top-middle">
 					<h5>Your Truths</h5>
 					<span ng-repeat="(truth, val) in user.data.usness.truths" ng-if="val">{{truth}}<br /></span>
+					<span ng-repeat="(truth, val) in user.data.usness.truths_other" ng-if="val">{{val}}<br /></span>
 				</div>
 				<div class="top-right">
 					<img src="img/top-right-arrow.svg" class="top-right-arrow" width="100%" />
@@ -21,13 +22,13 @@
 				<div class="middle-left">
 					<h5>Spouse's Actions</h5>
 					<span ng-repeat="(truth, val) in user.spouse_data.usness.actions" ng-if="val">{{truth}}<br /></span>
+					<span ng-repeat="(truth, val) in user.spouse_data.usness.actions_other" ng-if="val">{{val}}<br /></span>
 				</div>
 				<div class="middle-middle"></div>
 				<div class="middle-right">
 					<h5>Your Actions</h5>
-					<span ng-repeat="(action, val) in user.data.usness.actions" ng-if="val">{{action}}
-						<br />
-					</span>
+					<span ng-repeat="(action, val) in user.data.usness.actions" ng-if="val">{{action}}<br /></span>
+					<span ng-repeat="(action, val) in user.data.usness.actions_other" ng-if="val">{{val}}<br /></span>
 				</div>
 				<div class="bottom-left">
 					<img src="img/bottom-left-arrow.svg" class="bottom-left-arrow" width="100%" />
@@ -36,6 +37,7 @@
 					<br>
 					<h5>Spouse's Truths</h5>
 					<span ng-repeat="(truth, val) in user.spouse_data.usness.truths" ng-if="val">{{truth}}<br /></span>
+					<span ng-repeat="(truth, val) in user.spouse_data.usness.truths_other" ng-if="val">{{val}}<br /></span>
 				</div>
 				<div class="bottom-right">
 					<img src="img/bottom-right-arrow.svg" class="bottom-right-arrow" width="100%" />
