--- a/www/templates/usness_gifts_results_spouse.html
+++ b/www/templates/usness_gifts_results_spouse.html
@@ -5,15 +5,17 @@
 	<ion-content>
 		<h2>
 			<img src="img/usness-icon-small.png" class="cycles-icon" />&nbsp;Spiritual Gifts</h2>
-		<h4>Spiritual Gifts Results</h4>
+		<h4>Spouse's Spiritual Gifts Results</h4>
 		<ul class="gifts-list list">
-			<li ng-repeat="(gift,val) in user.data.usness.gifts" ng-if="val" class="item">
+			<li ng-repeat="(gift,val) in user.spouse_data.usness.gifts" ng-if="val" class="item">
 				<span class="circle-number">{{$index + 1}}</span>{{gift}}</li>
-			<li ng-repeat="(gift,val) in user.data.usness.gifts_other" ng-if="val" class="item">
+			<li ng-repeat="(gift,val) in user.spouse_data.usness.gifts_other" ng-if="val" class="item">
 				<span class="circle-number">{{$index + 1}}</span>{{val}}</li>
 		</ul>
 		<div class="padding">
-			<button ui-sref="menu.tabs.usness_gifts_results_spouse" class="button button-block button-calm">Compare with Spouse</button>
+			<form name="spouseGifts"></form>
+			<button ng-click="process('menu.tabs.usness_gifts_results_spouse',spouseGifts)" class="button button-block button-calm">Sync with your spouse</button>
+			<button ui-sref="menu.tabs.usness_gifts_results" class="button button-block button-calm">Back to your gifts</button>
 			<h1>
 				<img src="img/icon-further-small.png" class="cycles-icon" />&nbsp;TAKE IT FURTHER</h1>
 			<p>Affirm the gifts you see in each other. You may see a gift in your spouse that he or she hasn’t identified before. Notice how you and your spouse compare in your spiritual gifts. In what ways can these gifts work together?</p>
