updated libs and added basic push info

--- a/www/templates/decisions_view.html
+++ b/www/templates/decisions_view.html
@@ -12,11 +12,11 @@
 			</div>
 			<div class="grey_bg">
 				<div class="padding">
-					<h6>Problem</h6>
+					<h6>Decision to make</h6>
 					<p>{{decision.question}}</p>
-					<h6>Us Solution</h6>
+					<h6>Our Us Solution</h6>
 					<p>{{decision.solution}}</p>
-					<h6>My Solutions</h6>
+					<h6>Our brainstorming</h6>
 					<p>{{decision.solution1}}</p>
 					<p>{{decision.solution2}}</p>
 					<p>{{decision.solution3}}</p>
