update decisions for cron

--- a/www/templates/decisions_create.html
+++ b/www/templates/decisions_create.html
@@ -10,6 +10,7 @@
 				<label class="item item-input item-stacked-label">WHAT’S THE DECISION TO MAKE?
 					<input name="decision.question" type="text" value="decision" ng-model="decision.question" />
 					<input name="decision.index" type="hidden" ng-model="decision.index" />
+					<input name="decision.id" type="hidden" ng-model="decision.id" />
 				</label>
 			</div>
 			<div class="padding">
