--- a/www/templates/decisions_revisit.html
+++ b/www/templates/decisions_revisit.html
@@ -16,5 +16,8 @@
 				</div>
 			</div>
 		</div>
+		<div class="padding">
+			<button ui-sref="menu.tabs.decisions_create" class="button button-block button-calm">NEW DECISION</button>
+		</div>
 	</ion-content>
 </ion-view>
