--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -22,10 +22,10 @@
 				<!--Needs Validation-->
 				<div class="list list-inset">
 					<ionic-datepicker input-obj="anniversaryDatePicker" class="item item-input item-icon-right datepicker">
-						<div ng-if="user.data.wedding_anniversary">
-							{{user.data.wedding_anniversary | date:'MMMM dd, yyyy'}}
+						<div ng-if="user.User.anniversary">
+							{{user.User.anniversary | date:'MMMM dd, yyyy'}}
 						</div>
-						<div ng-if="!user.data.wedding_anniversary">
+						<div ng-if="!user.User.anniversary">
 							WEDDING ANNIVERSARY
 						</div>
 						<i class="icon ion-calendar icon-calm"></i>
@@ -33,10 +33,10 @@
 				</div>
 				<div class="list list-inset">
 					<ionic-datepicker input-obj="firstdateDatePicker" class="item item-input item-icon-right datepicker">
-						<div ng-if="user.data.first_date_anniversary">
-							{{user.data.first_date_anniversary | date:'MMMM dd, yyyy'}}
+						<div ng-if="user.User.first_date">
+							{{user.User.first_date | date:'MMMM dd, yyyy'}}
 						</div>
-						<div ng-if="!user.data.first_date_anniversary">
+						<div ng-if="!user.User.first_date">
 							FIRST DATE ANNIVERSARY
 						</div>
 						<i class="icon ion-calendar icon-calm"></i>
