--- a/www/templates/cycles_results.html
+++ b/www/templates/cycles_results.html
@@ -47,6 +47,8 @@
 				<img src="img/circle.svg" class="bottom-right-arrow" width="100%" />
 			</div>
 			<div class="padding">
+				<form name="peaceResults"></form>
+				<button ng-click="process('menu.tabs.cycles_results',peaceResults)" class="button button-block button-calm">Sync with your spouse</button>
 				<button ui-sref="menu.tabs.cycles_peace" class="button button-block button-calm">Sync with your spouse</button>
 				<button ui-sref="menu.tabs.cycles_peace" class="button button-block button-positive">Edit Your Peace Cycle</button>
 				<button ui-sref="menu.tabs.cycles_pain" class="button button-block button-calm">View Your Pain Cycle</button>
