--- a/www/templates/quizzes_boundaries.html
+++ b/www/templates/quizzes_boundaries.html
@@ -9,7 +9,7 @@
 			<p>Having clear boundaries in your relationships will help you guard against burnout, unrealistic expectations, feelings of inadequacy, and loneliness.  Clear boundaries take both fact and emotion into the decision-making process.</p>
 			<p><b>How are you doing with boundaries in the following categories?</b></p>
 		</div>
-		<form class="quizzesUnessForm" name="quizzesUnessForm" novalidate="" ng-submit="process('menu.tabs.quizzes_boundaries_results',quizzesUnessForm)">
+		<form class="quizzesBoundariesForm" name="quizzesBoundariesForm" novalidate="" ng-submit="process('menu.tabs.quizzes_boundaries_results',quizzesBoundariesForm)">
 			<div ng-repeat="question in boundariesQuestions">
 				<hr>
 				<h3>{{question.name}}</h3>
