--- a/www/templates/quizzes_boundaries_results.html
+++ b/www/templates/quizzes_boundaries_results.html
@@ -59,6 +59,7 @@
 		<div class="padding">
 			<br>
 			<button ui-sref="menu.tabs.quizzes" class="button button-block button-positive">Continue</button>
+			<button ui-sref="menu.tabs.quizzes_boundaries" class="button button-block button-calm">Edit Answers</button>
 		</div>
 	</ion-content>
 </ion-view>
