--- a/www/templates/usness_gifts_results.html
+++ b/www/templates/usness_gifts_results.html
@@ -19,6 +19,7 @@
 			<p>Affirm the gifts you see in each other. You may see a gift in your spouse that he or she hasn’t identified before. Notice how you and your spouse compare in your spiritual gifts. In what ways can these gifts work together?</p>
 			<br>
 			<button ui-sref="menu.tabs.usness" class="button button-block button-positive">Continue</button>
+			<button ui-sref="menu.tabs.usness_gifts" class="button button-block button-calm">Edit Answers</button>
 		</div>
 	</ion-content>
 </ion-view>
