--- a/www/templates/usness_personality.html
+++ b/www/templates/usness_personality.html
@@ -29,7 +29,7 @@
                     <label><input type="radio" name="personality.tasks" value="Structured" ng-model="user.data.usness.personality.tasks">More Orderly, Intentional, Prepared, Controlled  <br></label>
                     <label><input type="radio" name="personality.tasks" value="Open" ng-model="user.data.usness.personality.tasks">More Flexible, Spontaneous, Easygoing, Adaptable <br><br></label>
                     
-                    <label><input type="submit" value="Save and Continue" class="button button-block button-positive" /></label>
+                    <input type="submit" value="Save and Continue" class="button button-block button-positive" />
 <!--                    <button href="#" class="button button-block button-calm">Compare with Spouse</button>-->
                 </div>
             </form>
