--- a/www/templates/usness_personality_results.html
+++ b/www/templates/usness_personality_results.html
@@ -29,6 +29,7 @@
                 </p>
                 <br>
                 <button ui-sref="menu.tabs.usness" class="button button-block button-positive">Continue</button>
+                <button ui-sref="menu.tabs.usness_personality" class="button button-block button-calm">Edit Answers</button>
             </div>
 	</ion-content>
 </ion-view>
