--- a/www/templates/cycles_results.html
+++ b/www/templates/cycles_results.html
@@ -50,7 +50,8 @@
 				<form name="peaceResults"></form>
 				<button ng-click="process('menu.tabs.cycles_results',peaceResults)" class="button button-block button-calm">Sync with your spouse</button>
 				<button ui-sref="menu.tabs.cycles_peace" class="button button-block button-positive">Edit Your Peace Cycle</button>
-				<button ui-sref="menu.tabs.cycles_pain" class="button button-block button-calm">View Your Pain Cycle</button>
+				<button ng-if="!user.data.cyclesPainCopesForm" ui-sref="menu.tabs.cycles_pain" class="button button-block button-calm">Discover Your Pain Cycle</button>
+       			<button ng-if="user.data.cyclesPainCopesForm" ui-sref="menu.tabs.cycles_pain_results" class="button button-block button-calm">View Your Pain Cycle</button>
 			</div>
 		</div>
 	</ion-content>
