--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -13,7 +13,8 @@
 			<p>It's time your marriage had it's own app. Find out what makes your marriage tick and ways to make it even stronger.</p>
 			<p>You can start by discovering what's unique about your marriage in <a ui-sref="menu.tabs.usness">US-NESS</a>.  Then blow the whistle on how you conflict and learn proven ways to do it better in <a ui-sref="menu.tabs.cycles">CYCLES</a>.</p>
 			<p>The benefit and blessing of a strong marriage is waiting. Go get it!</p>
-			<a ui-sref="menu.tabs.profile" class="button button-block button-positive">Set Up Your Profile</a>
+			<a ng-if="!user.data.profileForm" ui-sref="menu.tabs.profile" class="button button-block button-positive">Set Up Your Profile</a>
+			<a ng-if="user.data.profileForm" ui-sref="menu.tabs.profile" class="button button-block button-positive">Edit Your Profile</a>
 			<a ui-sref="menu.tabs.usness" class="button button-block button-calm">Discover Your US-Ness</a>
 		</div>
 	</ion-content>
