--- a/www/templates/usness.html
+++ b/www/templates/usness.html
@@ -8,9 +8,12 @@
 		<div class="padding">
 			<p>“Us” is the third identity that lies between a couple. It’s neither completely like the wife or the husband, but a combination of the two. The Us cooperates for the good of the couple as a whole and views individual differences as strengths to the relationship. Learn more about <i>your</i> Us below.</p>
             <br>
-            <button ui-sref="menu.tabs.usness_activities" class="button button-block button-calm">US-NESS ACTIVITIES</button>
-            <button ui-sref="menu.tabs.usness_personality" class="button button-block button-calm">PERSONALITY</button>
-            <button ui-sref="menu.tabs.usness_gifts" class="button button-block button-calm">SPIRITUAL GIFTS</button>
+            <button ng-if="!user.data.usnessActivitiesForm" ui-sref="menu.tabs.usness_activities" class="button button-block button-calm icon-left">US-NESS ACTIVITIES</button>
+            <button ng-if="user.data.usnessActivitiesForm" ui-sref="menu.tabs.usness_activities_further" class="button button-block button-calm icon-left ion-ios-checkmark-outline">US-NESS ACTIVITIES</button>
+            <button ng-if="!user.data.usnessPersonalityForm" ui-sref="menu.tabs.usness_personality" class="button button-block button-calm icon-left">PERSONALITY</button>
+            <button ng-if="user.data.usnessPersonalityForm" ui-sref="menu.tabs.usness_personality_results" class="button button-block button-calm icon-left ion-ios-checkmark-outline">PERSONALITY</button>
+            <button ng-if="!user.data.usnessGiftsForm" ui-sref="menu.tabs.usness_gifts" class="button button-block button-calm icon-left">SPIRITUAL GIFTS</button>
+            <button ng-if="user.data.usnessGiftsForm" ui-sref="menu.tabs.usness_gifts_results" class="button button-block button-calm icon-left  ion-ios-checkmark-outline">SPIRITUAL GIFTS</button>
 		</div>
 	</ion-content>
 </ion-view>
